--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -353,7 +353,7 @@ iframe {
   }
 
   h2.home-final-title{
-    font-size: 45px;
+    font-size: 44px;
     font-weight: 500;
     margin-top: -315px;
     justify-content: center;
