--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -14,7 +14,7 @@
 .projects-left-section,
 .projects-left-section-upper {
   flex: 1;
-  padding: 0 10% 0 6%;
+  padding: 0 10% 0 1%;
   max-width: 400px;
   min-width: 320px;
 }
@@ -114,12 +114,6 @@
   margin-bottom: 20px;
 }
 
-.project-row-one img,
-.project-row-two img,
-.project-row-three img {
-  height: 200px; /* Set a fixed height for all images */
-  object-fit: cover; /* Ensures images cover the area without stretching */
-}
 
 .project-row-one img {
   width: 48%;
@@ -151,7 +145,7 @@
 .project-row-one img,
 .project-row-two img,
 .project-row-three img {
-  height: 200px;
+  height: 230px;
   object-fit: cover;
   cursor: pointer; /* Indicates the image is clickable */
 }
